appointment/src/objects/Setting__c.object
<CustomObject>
    <description>Business rules and parameters.</description>
    <fields>
        <fullName>Appointment_Intervals__c</fullName>
        <label>Appointment Intervals</label>
        <picklist>
            <picklistValues>
                <fullName>15 Minutes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>30 Minutes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display address to customers scheduling appointments</description>
        <label>Display Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Duration__c</fullName>
        <description>The unit of measure for &apos;Duration&apos; is minutes.</description>
        <inlineHelpText>Enter the duration in minutes.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friday_From_DT__c</fullName>
        <label>Friday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday_From__c</fullName>
        <label>Friday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday_To_DT__c</fullName>
        <label>Friday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday_To__c</fullName>
        <label>Friday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF(AND(ISBLANK(Last_Name__c ),ISBLANK(First_Name__c )), 
NULL, 
IF(ISBLANK(Last_Name__c ), TRIM(First_Name__c), TRIM(Last_Name__c) &amp; &quot;, &quot; &amp; TRIM(First_Name__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Lead_Time__c</fullName>
        <description>Maximum time an appointment may be made.</description>
        <inlineHelpText>Select maximum time an appointment may be made.</inlineHelpText>
        <label>Maximum Lead Time</label>
        <picklist>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Lead_Time__c</fullName>
        <description>Minimum amount of time between now and the time an appointment may be scheduled.</description>
        <inlineHelpText>Enter minimum lead time for an appointment.</inlineHelpText>
        <label>Minimum Lead Time</label>
        <picklist>
            <picklistValues>
                <fullName>1 Hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 Hrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_Duration__c</fullName>
        <description>The unit of measure for &apos;Duration&apos; is minutes.</description>
        <inlineHelpText>Enter the duration in minutes.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday_From_DT__c</fullName>
        <label>Monday From  DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_From__c</fullName>
        <label>Monday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_To_DT__c</fullName>
        <label>Monday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_To__c</fullName>
        <label>Monday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check if this is a standard work day for the business.</inlineHelpText>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday_Duration__c</fullName>
        <description>The unit of measure for &apos;Duration&apos; is minutes.</description>
        <inlineHelpText>Enter the duration in minutes.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saturday_From_DT__c</fullName>
        <label>Saturday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday_From__c</fullName>
        <label>Saturday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday_To_DT__c</fullName>
        <label>Saturday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday_To__c</fullName>
        <label>Saturday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sunday_Duration__c</fullName>
        <description>The unit of measure for &apos;Duration&apos; is minutes.</description>
        <inlineHelpText>Enter the duration in minutes.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday_From_DT__c</fullName>
        <label>Sunday From DT</label>
        <type>DateTime</type>
    </fields>
</CustomObject>